Removed "Correctly aligning the checkbox labels" part from asgard.less

--- a/assets/css/asgard.css
+++ b/assets/css/asgard.css
@@ -65,11 +65,10 @@ footer.main-footer p.text-muted {
   border-bottom: 1px solid #202227;
 }
 
-.checkbox label {
+/*.checkbox label {
   padding-left: 0;
 }
-
 .checkbox label div {
   margin-right: 5px;
   margin-top: -2px;
-}
+}*/
